updated base html, added nav bar, href for login/signup

--- a/betAny_django/templates/index.html
+++ b/betAny_django/templates/index.html
@@ -1,15 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>betAny</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
-</head>
+{% extends 'base_generic.html' %}
+{% block content %}
 <body>
-    <h1>betAny</h1>
-    <h3>Welcome {{request.user}}</h3>
+    <h3>Under Construction</h3>
 </body>
 </html>
+{% endblock %}
