--- a/betAny_django/templates/base_generic.html
+++ b/betAny_django/templates/base_generic.html
@@ -20,7 +20,7 @@
         <li><a href="#">Page 1</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li><a href="/accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
         <li><a href="/accounts/login/"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
