added 'my bets' and 'all bets' pages. cond. css to show active nav tab. change login/logout text in top right of app based on if user is logged in

--- a/betAny_django/templates/allBets.html
+++ b/betAny_django/templates/allBets.html
@@ -1,6 +1,6 @@
 {% extends 'base_generic.html' %}
 
-{% block title %}My Bets{% endblock %}
+{% block title %}All Bets{% endblock %}
 
 {% block content %}
 {% if user.is_authenticated %}
