adding simple my account page. now showing current logged in users name on top right of navbar

--- a/betAny_django/templates/base_generic.html
+++ b/betAny_django/templates/base_generic.html
@@ -21,20 +21,28 @@
         <li class="{% if request.path == '/all-bets' %} active{% endif %}"><a href="/all-bets">All Bets</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="/accounts/signup"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li>
-          {% if user.is_authenticated %}
-            <a href="/accounts/logout/">
-              <span class="glyphicon glyphicon-log-out"></span>
-              Logout
+        {% if user.is_authenticated %}
+          <li>
+            <a href="/accounts/home/">
+              <span class="glyphicon glyphicon-user"></span>
+              {{ user }}
             </a>
-          {% else %}
-            <a href="/accounts/login/">
-              <span class="glyphicon glyphicon-log-in"></span>
-              Login
-            </a>
+          </li>
+          <li>
+              <a href="/accounts/logout/">
+                <span class="glyphicon glyphicon-log-out"></span>
+                Logout
+              </a>
+          </li>
+        {% else %}
+          <li><a href="/accounts/signup/"><span class="glyphicon glyphicon-user"></span>Sign up</a></li>
+          <li>
+              <a href="/accounts/login/">
+                <span class="glyphicon glyphicon-log-in"></span>
+                Login
+              </a>
+          </li>
           {% endif %}
-        </li>
       </ul>
     </div>
   </nav>
